--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,10 @@ python:
     - 2.7
 sudo: false
 install:
-    - travis_retry pip install ipython nose requests
+    - pip install ipython nose requests codecov
     - python setup.py develop
 script:
     - python runtests.py
+
+after_success:
+  - codecov
