--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -2,7 +2,7 @@ name: PhysicalQuantities
 type: sphinx
 python:
     version: 3
-    setup_py_install: true
+    pip_install: true
 formats:
     - none
 requirements_file: docs/requirements.txt
