--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
     - 3.8
 sudo: false
 install:
-    - pip install ipython nose requests codecov
+    - pip install ipython nose requests codecov pytest coverage pytest-cover
     - python setup.py develop
 script:
     - python runtests.py
