--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -1,10 +1,13 @@
-name: PhysicalQuantities
-type: sphinx
+
+# Required
+version: 2
+
+# Set the version of Python and other tools you might need
 build:
-   image: latest
-python:
-    version: 3.8
-    setup_py_install: true
-formats:
-    - none
-requirements_file: docs/requirements.txt
+  os: ubuntu-22.04
+  tools:
+    python: "3.10"
+
+# Build documentation in the docs/ directory with Sphinx
+sphinx:
+   configuration: doc/source/conf.py
