--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -13,14 +13,5 @@ sphinx:
    configuration: docs/source/conf.py
 
 python:
-  install:
-  - method: pip
-    path: .
-    requirements:
-      - wrapt
-      - numpy
-      - IPython
-      - sphinx
-      - sphinx-rtd-theme
-      - sphinx-autodoc-typehints
-
+   install:
+   - requirements: docs/requirements.txt
